# screen_time_tracking_app

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  ScreenTimeTracker.xml  build.rs  diesel.toml  index.html  package.json  send_user_data.proto  vite.config.ts.timestamp-1741883635582-c804cca8626a6.mjs
migrations/2024-11-23-135704_app/: down.sql  up.sql
migrations/2024-11-23-135740_app_usage/: down.sql  up.sql
migrations/2025-01-08-000959_activity_classification/: down.sql  up.sql
migrations/2025-01-08-043352_sesssions/: up.sql
migrations/2025-01-27-084859_idle_time/: down.sql  up.sql
migrations/2025-02-12-154331_app_time/: down.sql  up.sql
proto/: send_user_data.proto
src/: App.tsx  app_data.rs  config.rs  logger.rs  main.rs  main.tsx  rpc_service.rs  tracker.rs  win.rs  zero_mq_service.rs
src-tauri/: .env  Cargo.toml  build.rs  diesel.toml  tauri.conf.json
src-tauri/migrations/2024-11-23-135740_app_usage/: down.sql  up.sql
src-tauri/migrations/2025-01-08-000959_activity_classification/: down.sql  up.sql
src-tauri/migrations/2025-01-27-084859_idle_time/: up.sql
src-tauri/migrations/2025-02-12-154331_app_time/: down.sql  up.sql
src-tauri/migrations/2025-03-11-153853_shell_link_info/: down.sql  up.sql
src-tauri/migrations/2025-03-12-060117_limit_app_usage/: down.sql  up.sql
src-tauri/src/: config.rs  error.rs  lib.rs  logger.rs  main.rs  tracker.rs  zero_mq_service.rs
src-tauri/src/config_watcher/: mod.rs
src-tauri/src/db/: connection.rs  models.rs
src-tauri/src/fs_watcher/: config_visitor.rs  config_watcher.rs  mod.rs  start_menu_watcher.rs
src-tauri/src/platform/: mod.rs  windows.rs
src-tauri/src/system_usage/: mod.rs
src-tauri/windows/fragments/: registry.wxs
src/components/: AppLauncherItem.tsx  AppUsageList.tsx  TabPanel.tsx
src/components/AppLauncher/: AppLauncherButton.tsx  AppLauncherCard.tsx  AppLauncherDetails.tsx  AppLauncherHeader.tsx  types.ts
src/components/AppUsageInfo/: AlertSettings.tsx  AppUsageInfo.tsx  TimeInput.tsx  UsageStats.tsx  utils.ts
src/config_watcher/: mod.rs
src/db/: connection.rs  mod.rs  models.rs  schema.rs
src/pages/: AppLauncherTab.tsx  AppUsageTab.tsx
src/platform/: mod.rs  windows.rs
src/system_usage/: mod.rs
