[package]
name = "app_window_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
windows = { version = "0.58.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemInformation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }

[dependencies]
chrono = "0.4.31"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
tonic = "0.12.3"
prost = "0.13.3"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "uuid" ,"time", "serde_json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1.0.93"
uuid = {version = "1.11.0", features = ["serde", "v4"]}
serde = "1.0.215"
futures = "0.3.31"
dotenvy = "0.15.7"
spin_sleep = "1.2.1"


[build-dependencies]
tonic-build = "0.12.3"

[target.'cfg(windows)'.build-dependencies]
winres = "^0.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
