[package]
name = "app_window_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemInformation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Foundation", "Win32_System_Com", "Win32_UI_Shell"
] }

[dependencies]
chrono = "0.4.31"
dirs = "5.0"
dotenvy = "0.15.7"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "uuid" ,"time", "serde_json"] }
rusqlite = { version = "0.32.0", features = ["bundled", "chrono"] }
anyhow = "1.0.93"
uuid = {version = "1.11.0", features = ["serde", "v4"]}
serde = "1.0.215"
futures = "0.3.31"
spin_sleep = "1.2.1"



[build-dependencies]
build-print = "0.1.1"
dirs = "5.0"
dotenvy = "0.15.7"
diesel_migrations = "2.2.0"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "uuid" ,"time", "serde_json"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }


[target.'cfg(windows)'.build-dependencies]
winres = "^0.1"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
