[package]
name = "app_window_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemInformation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Foundation", "Win32_System_Com", "Win32_UI_Shell","Win32_Graphics_Gdi",
] }

[dependencies]
sysinfo = "0.33.1"
nvml-wrapper = "0.10.0"
chrono = "0.4.31"
dirs = "5.0"
dotenvy = "0.15.7"
tokio = { version = "1.32.0", features = ["full"] }
rusqlite = { version = "0.32.0", features = ["bundled", "chrono"] }
anyhow = "1.0.93"
uuid = {version = "1.11.0", features = ["serde", "v4"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.22"
env_logger = "0.11.6"
unicode-segmentation = "1.9.0"
regex = "1.11.1"
futures = "0.3.31"
zmq = "0.10.0"


[build-dependencies]
build-print = "0.1.1"
dirs = "5.0"
dotenvy = "0.15.7"
diesel_migrations = "2.2.0"
diesel = { version = "2.2.0", features = ["sqlite"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }


[target.'cfg(windows)'.build-dependencies]
winres = "^0.1"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
