[package]
name = "screen_time_tracking_front_end"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "screen_time_tracking_front_end_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
build-print = "0.1.1"
dirs = "5.0"
dotenvy = "0.15.7"
diesel_migrations = "2.2.0"
diesel = { version = "2.2.0", features = ["sqlite"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_UI_WindowsAndMessaging", "Win32_System_SystemInformation",
    "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading",
    "Win32_System_ProcessStatus", "Win32_Foundation",
    "Win32_System_Com", "Win32_UI_Shell",
    "Win32_Graphics_Gdi", "Wdk_Storage_FileSystem", "Win32_System_Ole",
    "Wdk_Storage_FileSystem", "Win32_Storage_FileSystem", "UI_Notifications",
    "Data_Xml_Dom", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Com_StructuredStorage",
    "ApplicationModel_Activation", "Foundation_Collections"
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[dependencies]
anyhow = "1.0.93"
chrono = {version = "0.4.31", features = ["serde"] }
dirs = "5.0"
dotenvy = "0.15.7"
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.22"
notify = "8.0.0"
nvml-wrapper = "0.10.0"
regex = "1.11.1"
rusqlite = { version = "0.32.0", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33.1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
thiserror = "2.0.12"
tokio = { version = "1.32.0", features = ["full"] }
unicode-segmentation = "1.9.0"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
zmq = "0.10.0"
internment = {version = "0.8.6", features = ["arc"] }
itoa = "1.0.15"
atoi = "2.0.0"
image = "0.25.6"
ico = "0.4.0"
base64 = "0.22.1"
percent-encoding = "2.3.1"
walkdir = "2.5.0"
tauri-plugin-store = "2"


[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Remove debug symbols
panic = "abort" # Strip expensive panic clean-up logic
lto = true # Enables link to optimization



